# securescan

./: .env.example  .gitignore  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: securescan.yml  securescan.yml.example
scripts/: merge_severity.py
securescan/: cli.py  config.py  default_config.yml  diff.py  pipeline.py  rule_config.py
securescan/analyze/: adversarial_reviewer.py  codebase_digest.py  opus_client.py  vulnerability_analyzer.py
securescan/detect/: models.py  secrets_scanner.py  semgrep_runner.py
securescan/ingest/: manifest.py  repo.py
securescan/parse/: dependencies.py  parser.py  treesitter.py
securescan/remediate/: codex_client.py  patch_generator.py
securescan/report/: generator.py
securescan/report/templates/: report.html
securescan/utils/: logging.py  tokens.py
semgrep_rules/: secrets_custom.yaml  sqli_javascript.yaml  sqli_python.yaml
tests/: test_detect.py  test_diff.py  test_ingest.py  test_local_scan.py  test_parse.py  test_pipeline.py  test_report.py  test_rule_config.py
